--- a/src/style.scss
+++ b/src/style.scss
@@ -8,9 +8,5 @@ p {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
-}
-
-.upsideDown option {
-  transform: rotate(180deg);
+  height: 1200px;
 }
